--- a/css/schedule.css
+++ b/css/schedule.css
@@ -29,18 +29,27 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0px 15%;
-    margin-bottom: 3rem;
-    height: calc(50vh - 3rem);
+    padding: 15% 0px;
     background-image: url('../img/background-image2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed;
 }
+
+@media (max-width: 769px) {
+    .jumbotron {
+      background-attachment: initial;
+    }
+  }
 
 .jumbotron h1 {
     color: white;
+}
+
+@media (max-width: 381px) {
+    .jumbotron h1 {
+        font-size: 4em;
+    }
 }
 
 h1 {
